--- a/web-static/index.html
+++ b/web-static/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NoHentai</title>
+    <title>NoHentai | の変態</title>
     <script>
       // 防止主题切换闪烁 - 在页面加载前立即应用主题
       (function() {
